[package]
name = "osmium_rs"
version = "0.1.0"
edition = "2018"
description = "All around versatile discord bot for fun and slight moderation."
homepage = "https://stereo528.github.io"
repository = "https://github.com/Stereo528/OsmiumRS"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "rustls_backend"] }
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.66"

[[bin]]
name = "osmium_rs"
path = "src/main.rs"